# 50051-plc-group4

./: .gitignore  CMakeLists.txt  Makefile  README.md  cleanRebuild.cmd  cleanRebuild.sh  output.txt
sample_outputs/: output_3x3.txt  output_5x5.txt
src/: CMakeLists.txt  app_fsm.c  app_fsm.h  main.c
src/ascii/: Makefile  README.md  ascii.c  ascii.h  ascii_main.c  ascii_main.h  main  main.c  main.h
src/ascii_currently_not_in_use/: Makefile  README.md  ascii_main.c  main  main.c  main.h
src/edge_detection/: Makefile  README.md  edge_detection  edge_detection.c  edge_detection.h  edge_detection_main.c  edge_detection_utils.c  main.c  utils.c  utils.h
src/fsm/: fsm_actions.c  fsm_logic.h
src/integrated/: app_fsm.h  main.c
src/process_bitmap/: Makefile  README.md  bitmap.c  bitmap.h  bitmap_main.c  bitmap_parser.c  bitmap_parser.h  bitmap_processor  bitmap_utils.c  bitmap_utils.h  main.c  utils.c
src/process_bitmap/parser/: Makefile  bitmap_parser.c  bitmap_parser.h  main.c
src/process_bitmap/previous_implementation/: bitmap.c  main.c  utils.c  utils.h
src/utilities/: fsm_actions.c  fsm_actions.h  fsm_logic.h  matrices.c  matrices.h  string_helpers.c  string_helpers.h
src/utils/: utils.c  utils.h
tests/: CMakeLists.txt  main.c  test_main.c  test_utils_main.c
tests/ascii/: test_ascii.c  test_ascii.h
tests/utilities/: test_matrices.c  test_matrices.h
tests/utils/: test_utils.c  test_utils.h
